--- a/src/App.css
+++ b/src/App.css
@@ -10,21 +10,6 @@ body {
   background-color: #f8f9fa;
 }
 
-.headerpic {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.bgimg {
-  filter: blur(2px);
-}
 /* Sport Icons */
 .sport-icon-right:hover {
   transform: translate(12px);
@@ -48,11 +33,27 @@ body {
 
 /* Searchbar */
 .searchbar {
+  padding: 10px;
+  border: solid #c8ccd0 1px;
+  border-radius: 3px 0px 0px 3px;
+  -webkit-transition: box-shadow linear 0.2s;
+  transition: box-shadow linear 0.2s;
   border-right: 0;
 }
 
+.searchbar:focus {
+  outline: none;
+  border-color: #6c757d;
+  box-shadow: 0 0 10px #6c757d;
+}
+
+.searchbar:hover {
+  border-color: #6c757d;
+  box-shadow: 0 0 10px #6c757d;
+}
+
 .search-icon-container {
-  background-color: #fff;
+  background-color: #eaecee;
   color: #6c757d;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -96,9 +97,81 @@ body {
   margin: 0px auto;
 }
 
+/* Blog Posts */
+.linkToBlogPost {
+  background-color: #ccc;
+  width: 100%;
+  border-radius: 0;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -o-transition: all 2s ease;
+  transition: all 2s ease;
+}
+
+.linkToBlogPost:hover {
+  background-color: #b6ac95;
+  width: 50%;
+  min-width: 100px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+
+.btn-blogTeaser,
+.btn-blogTeaser:hover,
+.btn-blogTeaser:focus {
+  display: inline-block;
+  text-decoration: none !important;
+  color: #ffffff;
+  padding: 10px;
+  min-width: 100px;
+  border: 0;
+  box-shadow: 0;
+}
+
+/* Article */
+.container-blogImg {
+  position: relative;
+}
+
+.container-blogImg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: 0.5s ease;
+}
+
+.overlay {
+  position: absolute;
+  color: #191919;
+  font-weight: 700;
+  font-size: 3em;
+  width: 100%;
+  height: 200px;
+  top: 100%;
+  left: 50%;
+  padding: 50px 10px;
+  transform: translate(-50%, -170%);
+  opacity: 1;
+  text-align: center;
+  background: #ffffff90;
+}
+
+.img-article {
+  width: 100%;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.p-article {
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
 /* Footer */
 .footer {
   background-color: #ced0d0;
+  margin-top: 40px;
   padding: 20px 0;
   color: #191919;
   border-top: 1px solid #191919;
@@ -116,6 +189,20 @@ body {
 .pointer {
   cursor: pointer;
 }
-h1 {
-  outline-color: gray;
+
+.socialicon {
+  width: 50px;
+  height: 50px;
+  padding: 1rem;
+}
+
+.bg-light {
+  background-color: #fff;
+  opacity: 1;
+}
+
+.bg-light:hover {
+  background-color: #fff;
+  color: #353636;
+  opacity: 1;
 }
