--- a/src/App.css
+++ b/src/App.css
@@ -168,22 +168,95 @@ body {
   font-weight: 300;
 }
 
+/* Pagination */
+.paginationBtns {
+  width: 80%;
+  height: 40px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  list-style: none;
+}
+
+.paginationBtns a {
+  text-decoration: none;
+  background-color: #ccc;
+  color: #fff;
+  padding: 5px 10px;
+  margin: 8px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.paginationBtns a:hover {
+  background-color: #191919;
+  color: #fff;
+}
+
+.previousBtns {
+  color: #fff;
+}
+
+.nextBtn a {
+  background-color: transparent;
+}
+
+.paginationDisabled a {
+  background-color: #fff;
+  color: #ccc;
+  border: 0;
+}
+
+.paginationDisabled a:hover {
+  background-color: #fff;
+  color: #ccc;
+  border: 0;
+  cursor: default;
+}
+
+.paginationActive {
+  color: #fff;
+}
+
+.paginationActive a {
+  color: #fff;
+  background-color: #191919;
+}
+
 /* Footer */
 .footer {
-  background-color: #ced0d0;
+  background-image: url("assets/Running\ Nature\ fabio-comparelli-uq2E2V4LhCY-unsplash.jpg");
+  background-size: cover;
+  background-position-y: bottom;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
   margin-top: 40px;
   padding: 20px 0;
-  color: #191919;
+  color: #fff;
   border-top: 1px solid #191919;
+  position: relative;
+}
+
+.overlayFooter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  opacity: 0.8;
+  background: #191919;
 }
 
 .footer a {
-  color: #191919;
+  color: #fff;
   font-weight: 700;
 }
 
 .hr {
-  background-color: #191919;
+  background-color: #fff;
 }
 
 .pointer {
@@ -205,4 +278,51 @@ body {
   background-color: #fff;
   color: #353636;
   opacity: 1;
+}
+
+/* Form in the Footer */
+.inputfield {
+  padding: 10px;
+  border: solid #c8ccd0 1px;
+  border-radius: 3px 0px 0px 3px;
+  -webkit-transition: box-shadow linear 0.2s;
+  transition: box-shadow linear 0.2s;
+  border-right: 0;
+}
+
+.inputfield:focus {
+  outline: none;
+  border-color: #6c757d;
+  box-shadow: 0 0 10px #6c757d;
+}
+
+.inputfield:hover {
+  border-color: #6c757d;
+  box-shadow: 0 0 10px #6c757d;
+}
+
+#emailHelp {
+  font-size: 0.8em;
+  font-style: italic;
+  margin-left: 11px;
+}
+
+.span-custom {
+  width: 90px;
+  font-size: 0.8em;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.btn-footer {
+  width: 90px;
+  font-size: 0.8em;
+}
+
+.copyright {
+  color: #fff;
+}
+
+.footer p {
+  color: #fff;
 }
